app/assets/stylesheets/nav.scss
$bgDefault      : #213c3c;
$bgHighlight    : #457e65;
$colDefault     : #e3e7f6;
$colHighlight   : #f0cf72;
$dropDown       : true;
.navbar-default {
  background-color: $bgDefault;
  border-color: $bgHighlight;
  .navbar-brand {
    color: $colDefault;
    &:hover, &:focus { 
      color: $colHighlight; }}
  .navbar-text {
    color: $colDefault; }
  .navbar-nav {
    > li {
      > a {
        color: $colDefault;
        &:hover,  &:focus {
          color: $colHighlight; }}
      @if $dropDown {
        > .dropdown-menu {
          background-color: $bgDefault;
          > li > a {
            color: $colDefault;
            &:hover,  &:focus {
              color: $colHighlight;
              background-color: $bgHighlight; }}
          .divider {
            background-color: $bgHighlight;}}}
    }
    > .active {
      > a, > a:hover, > a:focus {
        color: $colHighlight;
        background-color: $bgHighlight; }}
    > .open {
      > a, > a:hover, > a:focus {
        color: $colHighlight;
        background-color: $bgHighlight;}}}
  .navbar-toggle {
    border-color: $bgHighlight;
    &:hover, &:focus {
      background-color: $bgHighlight; }
    .icon-bar {
      background-color: $colDefault; }}
  .navbar-collapse,
  .navbar-form {
    border-color: $colDefault; }
  .navbar-link {
    color: $colDefault;
    &:hover {
      color: $colHighlight; }}}
.badge > a {
  text-decoration: none;
  color: $colDefault;
  &:hover, &:focus {
    color: $colHighlight;
  }

}
.btn-info {
  background: #591DE6 !important;
  border-color: #4D2198; 
    &:hover {
      background: #4400FF !important;}
}

.btn-danger {
  background: #861E1E !important;
  border-color: #6D1A1A;
    &:hover {
      background: #581F1F !important;}
}

.btn-group {
  @if $dropDown {
    > .dropdown-menu {
      background-color: $bgDefault;
      > li > a {
        color: $colDefault;
        &:hover,  &:focus {
          color: $colHighlight;
          background-color: $bgHighlight; }}
      .divider {
        background-color: $bgHighlight;}}}}
@media (max-width: 767px) {
  .navbar-default .navbar-nav .open .dropdown-menu {
    > li > a {
      color: $colDefault;
      &:hover, &:focus {
        color: $colHighlight; }}
    > .active {
      > a, > a:hover, > a:focus, {
        color: $colHighlight;
        background-color: $bgHighlight; }}}
}

